# Ros2_Class

./: ..gitmodules.swp  .gitmodules  README.md  map.pgm  map.yaml  run-node.webm
src/control_node/: CMakeLists.txt  package.xml
src/control_node/src/: ctrl_node.cpp
src/cv_pkg/: CMakeLists.txt  package.xml
src/cv_pkg/src/: cv_face_detect.cpp  cv_follow.cpp  cv_hsv.cpp  cv_image.cpp
src/demo_cpp_service/: CMakeLists.txt  package.xml
src/demo_cpp_service/launch/: demo.launch.py  high_learn.launch.py
src/demo_cpp_service/src/: turtle_control_client.cpp  turtle_control_service.cpp
src/demo_cpp_topic/: CMakeLists.txt  package.xml
src/demo_cpp_topic/src/: demo_cpp_control.cpp  demo_cpp_pub.cpp
src/demo_python_service/: package.xml  setup.py
src/demo_python_service/demo_python_service/: face_detect_client_node.py  face_detect_node.py  learn_face_detect.py
src/demo_python_service/launch/: demo.launch.py
src/imu_pkg/: CMakeLists.txt  package.xml
src/imu_pkg/src/: imu_behavior.cpp  imu_data.cpp
src/lidar_pkg/: CMakeLists.txt  package.xml
src/lidar_pkg/src/: lidar_behavior.cpp  lidar_data.cpp
src/nav_pkg/: CMakeLists.txt  package.xml
src/nav_pkg/launch/: nav.launch.py  waypoint_nav.launch.py
src/nav_pkg/src/: waypoint_navigation.cpp
src/originbot_desktop/: README.md  install_prereq.sh
src/originbot_desktop/originbot_app/: CMakeLists.txt  README.md  package.xml
src/originbot_desktop/originbot_app/include/: RobotAlgorithm.h  mainwindow.h  rclcomm.h  roboGLWidget.h  roboImg.h  roboItem.h
src/originbot_desktop/originbot_app/src/: main.cpp  mainwindow.cpp  rclcomm.cpp  roboGLWidget.cpp  roboImg.cpp  roboItem.cpp
src/originbot_desktop/originbot_app/ui/: mainwindow.ui
src/originbot_desktop/originbot_deeplearning/10_model_convert/mapper/: 02_preprocess.sh
src/originbot_desktop/originbot_deeplearning/line_follower_model/: setup.cfg
src/originbot_desktop/originbot_deeplearning/line_follower_model/line_follower_model/: verify.py
src/originbot_desktop/originbot_demo/: setup.cfg  setup.py
src/originbot_desktop/originbot_demo/originbot_demo/: line_follower.py
src/originbot_desktop/originbot_description/: package.xml  setup.cfg  setup.py
src/originbot_desktop/originbot_description/launch/: display.launch.py
src/originbot_desktop/originbot_description/meshes/: camera_link.STL  laser_link.STL  left_wheel_link.STL  right_wheel_link.STL
src/originbot_desktop/originbot_description/urdf/: originbot.urdf
src/originbot_desktop/originbot_gazebo/: package.xml  setup.cfg  setup.py
src/originbot_desktop/originbot_gazebo/launch/: display_rviz.launch.py  originbot.launch.py  originbot_follow_line_gazebo.launch.py  originbot_gazebo.launch.py  originbot_navigation_gazebo.launch.py  originbot_with_rgbd_gazebo.launch.py
src/originbot_desktop/originbot_gazebo/rviz/: urdf.rviz
src/originbot_desktop/originbot_gazebo/urdf/: base_gazebo.xacro  camera_gazebo.xacro  lidar_gazebo.xacro  originbot_gazebo.xacro  originbot_with_rgbd_gazebo.xacro  rgbd_gazebo.xacro
src/originbot_desktop/originbot_gazebo/worlds/: new_track.world
src/originbot_desktop/originbot_gazebo_fortress/: package.xml  setup.cfg  setup.py
src/originbot_desktop/originbot_gazebo_fortress/config/: ros_gz_bridge_originbot.yaml
src/originbot_desktop/originbot_gazebo_fortress/launch/: load_originbot_into_gazebo_fortress.launch.py  load_originbot_into_maze_gazebo.launch.py
src/originbot_desktop/originbot_gazebo_fortress/urdf/: base_gazebo.xacro  camera_gazebo.xacro  lidar_gazebo.xacro  originbot_gazebo.xacro  originbot_with_rgbd_gazebo.xacro  rgbd_gazebo.xacro
src/originbot_desktop/originbot_gazebo_harmonic/: package.xml  setup.cfg  setup.py
src/originbot_desktop/originbot_gazebo_harmonic/launch/: load_originbot_into_gazebo.launch.py  load_originbot_into_line_follower_gazebo.launch.py  load_originbot_into_maze_gazebo.launch.py
src/originbot_desktop/originbot_gazebo_harmonic/urdf/: base_gazebo.xacro  camera_gazebo.xacro  lidar_gazebo.xacro  originbot_gazebo.xacro  originbot_with_rgbd_gazebo.xacro  rgbd_gazebo.xacro
src/originbot_desktop/originbot_gazebo_harmonic/worlds/: line_follower.sdf
src/originbot_desktop/originbot_navigation/: CMakeLists.txt
src/originbot_desktop/originbot_navigation/config/: lds_2d.lua
src/originbot_desktop/originbot_navigation/launch/: cartographer_gazebo.launch.py  nav2_carto.py  nav_bringup_gazebo.launch.py  rtab_rgbd_gazebo.launch.py  rtab_scan_gazebo.launch.py
src/originbot_desktop/originbot_navigation/maps/: cloister.yaml  my_map.pgm  my_map.yaml
src/originbot_desktop/originbot_navigation/rviz/: navigation.rviz
src/originbot_desktop/originbot_qrcode_detect/: CMakeLists.txt  package.xml
src/originbot_desktop/originbot_qrcode_detect/src/: qr_decoder.cpp
src/originbot_desktop/originbot_send_goal/: CMakeLists.txt  package.xml
src/originbot_desktop/originbot_send_goal/src/: send_goal_node.cpp
src/originbot_desktop/originbot_viz/: package.xml  setup.cfg  setup.py
src/originbot_desktop/originbot_viz/launch/: display_imu.launch.py  display_lidar.launch.py  display_navigation.launch.py  display_robot_tf.launch.py  display_slam.launch.py
src/originbot_desktop/originbot_viz/rviz/: imu.rviz  lidar.rviz  slam.rviz  tf.rviz
src/pc_pkg/: CMakeLists.txt  package.xml
src/pc_pkg/src/: pc_data.cpp  pc_objects.cpp
src/service_interface/: CMakeLists.txt  package.xml
src/service_interface/srv/: FaceDetector.srv  Patrol.srv
src/slam_pkg/: CMakeLists.txt  package.xml
src/slam_pkg/launch/: slam.launch.py
src/vel_pkg/: CMakeLists.txt  package.xml
src/vel_pkg/src/: vel_node.cpp
